--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "vite": "^7.0.4"
   },
   "dependencies": {
+    "@enable3d/phaser-extension": "^0.26.1",
     "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
     "@types/three": "^0.178.1",
+    "matter-js": "^0.20.0",
     "phaser": "^3.90.0",
     "stats-js": "^1.0.1",
     "three": "^0.178.0"
