--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "vite": "^7.0.4"
   },
   "dependencies": {
+    "@babylonjs/core": "^7.0.0",
+    "@babylonjs/gui": "^7.0.0",
+    "@babylonjs/loaders": "^7.0.0",
+    "@babylonjs/materials": "^7.0.0",
+    "@babylonjs/serializers": "^7.0.0",
+    "@babylonjs/inspector": "^7.0.0",
     "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
-    "@types/three": "^0.178.1",
-    "phaser": "^3.90.0",
-    "stats-js": "^1.0.1",
-    "three": "^0.178.0"
+    "cannon-es": "^0.20.0",
+    "stats-js": "^1.0.1"
   }
 }
